loader in login and signup color change

--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -185,7 +185,7 @@ input[type="submit"]:active
     color: red;
 }
 .load{
-    background-color: #fff;
+    /* background-color:; */
     width: 100vw;
     height: 100vh;
     display: flex;
