--- a/frontend/src/pages/Navbar.css
+++ b/frontend/src/pages/Navbar.css
@@ -8,6 +8,7 @@
     display:flex ;
     justify-content: space-around;
     align-items: center;
+    z-index: 1;
 }
 .subtopic{
     display: flex;
