--- a/frontend/src/pages/Leetcode.css
+++ b/frontend/src/pages/Leetcode.css
@@ -129,3 +129,20 @@ a:hover{
     background-color: white;
     color: white;
 }
+
+/* Profile Analysis */
+.profileAnalysis{
+    padding: 0.5em;
+    font-size: 1rem;
+    border-radius: 10px;
+    font-weight: 600;
+}
+.piechart{
+    width: 400px;
+    height: 400px;
+}
+.center{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
